--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title></title>
+	<script type="text/javascript">/* Yandex Metrika */</script>
 </head>
 <body>
 	<a href="payment.html">Pay</a>
